# mcdcbot

./: README.md
mcdcbot/: Cargo.toml  my_token.txt  settings.txt
mcdcbot/servers/: MyTest
mcdcbot/src/: data.rs  embed.rs  getmyip.rs  main.rs  settings.rs
minecraft_manager/src/: lib.rs  threaded.rs
