[package]
name = "mcdcbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft_manager = { path = "../minecraft_manager" }
poise = "0.5.7"
reqwest = "0.11.22"
tokio = { version = "1.34.0", default-features = false }
